# wp4-LLE

./: README.md
Detection/Software/: Dockerfile  InterfaceCal.xlsx  README.md  conversion255.txt  interface_calibration.csv  pumpingCalibration.csv  pumpingCalibration130.csv  pumpingCalibration50.csv  pumpingCalibrationCheck100.csv  pyproject.toml
Detection/Software/API/FastAPI/BeltDrainLLE/: BeltDrainLLE.py  InterfaceAlg.py  LLEBeltDrainProcedures.py  requirements.txt  volumeCalculationTest.py
Detection/Software/Drivers/BeltSensor/: BeltSensor.ino  BeltSensorDriver.py  PinListBeltSensor.md
Detection/Software/Drivers/BeltSensorCmd/: BeltSensorCmd.ino  BeltSensorDriverCmd.py
Detection/Software/Drivers/CameraDriver/: CameraDriver.py
Detection/Software/Drivers/DrainingAndRotary/: DrainingAndRotary.ino
Detection/Software/Drivers/DrainingAndRotaryCmd/: DrainingAndRotaryCmdDriver.py
Detection/Software/Drivers/DrainingAndRotarySpetec/: DrainingAndRotarySpetec.ino
Detection/Software/Drivers/ValveAndMixingCmd/: ValveAndMixingCmdDriver.py
Detection/Software/Drivers/WeightMixer/: WeightMixerDriver.py
Detection/Software/GUI/: COMP1aCOMP2spectro-data2.csv  COMP1aCOMP2spectro-data2RAW.csv  LLESettlingGUICam.py  Readme.md
Detection/Software/software/Calibration/: DrainOut.py  FillIn.py  InterfaceCalibration.py  PumpCalibration.py  TubingCalibration.py
Detection/Software/software/Drivers/: Serial_find.py
Detection/Software/software/Drivers/BeltSensorCmd/: BeltSensorDriverCmd.py
Detection/Software/software/GUI/: LLESettlingGUI.py
Detection/Software/software/Test/: DiaphragmPump_API_test.py  ProcessTest.py  SettlingTest.py  testserial.py
(+1088 files in other folders)
